# terminalvideoplayer

./: .gitignore  CMakeLists.txt  README.md  embed_file.cmake  tvp
inc/: opencl_proc.h  pixelmap.h  video.h
src/: main.cpp  opencl_proc.cpp  process_frame.cl  video.cpp
